# lattice_planner

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  global_planner_plugin.xml  mainpage.dox  package.xml  static_costmap_plugin.xml
cfg/: SocialCostmap.cfg
config/: global_planner_params.yaml
doc/: howto
include/lattice_planner/: cost_manager.h  dijkstra.h  discrete_state.h  dynamic_costmap.h  dynamic_layers.h  hasher.h  heuristics.h  motion_constraints.h  planner_core.h  pose.h  state.h  state_discretizer.h  static_costmap.h  tb_lattice.h  timed_costmap.h  trajectory_rollout.h  velocity.h
msg/: Path.msg
src/: cost_manager.cpp  dijkstra.cpp  heuristics.cpp  planner_core.cpp  state_discretizer.cpp  static_costmap.cpp  tb_lattice.cpp  trajectory_rollout.cpp
